[package]
name = "sound"
version = "0.1.0"
authors = ["Florin Saftoiu <florin.saftoiu@soft-to-you.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "0.11.0"
rand = "0.8.4"

[build-dependencies]
windows = "0.11.0"